# supporter

./: Cargo.toml  README.md  build.go  config.go  config_template.toml  contest.go  contest_test.go  fetch.go  go.mod  go.sum  init.go  main.go  run.go  submit.go  testcmd.go
.github/workflows/: test.yml
src/: main.rs  util.rs
