[package]
name = "supporter"
version = "0.1.0"
authors = ["Kohei Morita <yosupo06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
env_logger = "0.7.1"
log = "0.4.8"
dirs = "2.0.2"
glob = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
